# ai-assisted-software-engineering-foundation

./: Makefile  README.md  pyproject.toml  requirements.in  requirements.txt  validate_repo.sh
.github/workflows/: ci.yml  lint.yml
configs/: prompt_eval_rubric_example.yaml
course-completion/: CODE_EXPLANATIONS.md  FULL_NOTES.md  TICKET_ANSWERS.md
docs/: CORE_CONCEPTS.md  CV_READY_SUMMARY.md  LESSON_EXECUTION_COMPANION.md  LESSON_RESEARCH_ANALYSIS_COMPANION.md  OFFLINE_INDEX.md  PORTFOLIO_SKILL_MAPPING.md  PROJECT_MANUAL.md  PROJECT_RUNBOOKS_DETAILED.md  README.md  REPOSITORY_STATUS_REPORT.md
docs/agent_engineering/: AGENT_ENGINEERING_MANUAL.md
docs/evals/: EVALS_AND_ACCEPTANCE_MANUAL.md
docs/foundations/: FOUNDATIONS_GUIDE.md
docs/ops/: TEAM_OPERATING_MODEL_MANUAL.md
docs/prompt_engineering/: PROMPT_SOFTWARE_ENGINEERING_MANUAL.md
docs/security/: SECURITY_GOVERNANCE_MANUAL.md
projects/: README.md
projects/agent-starter-lab/: README.md
projects/context-engineering-lab/: README.md
projects/multi-agent-code-review-lab/: README.md
projects/prompt-evals-lab/: README.md
projects/rag-coding-assistant-lab/: README.md
prompts/oneshot/: AISE_REPO_BUILDER_ONESHOT.md
prompts/templates/: code_review_prompt_template.md  task_prompt_template.md
python-projects/: README.md
python-projects/01_fundamentals/: exercises.py  solutions.py
python-projects/02_data_structures/: README.md  exercises.py  solutions.py
python-projects/03_algorithms/: README.md  (+2 more)
scripts/: check_library_index.py
tests/: test_agent_runtime.py
tickets/: README.md
(+31 files in other folders)
