[project]
name = "ai-assisted-software-engineering-foundation"
version = "0.1.0"
description = "Professional curriculum for AI-assisted software engineering and agent engineering workflows."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
